# C_Prog

./: CMakeLists.txt  README.md
src/: funcPtrCalc.c  funcPtrCalc.h  main.c
